--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header h2 span {
   color: #ffc107;
-  border-bottom: 2px solid #1c7d32;
+  border-bottom: 2px solid #7d1c1c;
   padding-bottom: 6px;
 }
 
